eyetracking_ros_ws/log/build_2024-02-13_15-18-54/rgbd_camera/stderr.log
  File "/home/locobot/SU_Robotics/ros_ws/install/rgbd_camera/lib/python3.8/site-packages/rgbd_camera/depth_node.py", line 30
    if event == cv2.EVENT_LBUTTONDOWN:
                                     ^
SyntaxError: invalid syntax

